Added Product feature which include: - Product table migration - Product data seeder - Get all product API with the Swagger Docs. - Added middleware for checking authorized user to access the API
